# popari

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  noxfile.py  pyproject.toml
SpiceMix/: HMRF-for-simulation.ipynb  Model.py  Result.py  SpiceMixDataset.py  allen_mouse_brain_atlas_simulation.ipynb  analyze_STARmap_results.ipynb  analyze_SeqFISHPlus_results.ipynb  analyze_results.ipynb  clustering_test.ipynb  estimateParameters.py  estimateWeights.py  estimate_parameters.py  estimate_weights.py  generate_simulation.ipynb  initialization.py  loadData.py  load_data.py  main.py  main_synthetic.ipynb  metagene_based_pseudo_3D_simulation.ipynb  metagene_based_simulation.ipynb  model.py  phenotype_prediction_example.ipynb  process_spatialLIBD_data.ipynb  reformat_result.ipynb  run.sh  run_SpaGCN.ipynb  sampleForIntegral.py  sample_for_integral.py  seurat_example.ipynb  synthesize.py  util.py
docs/: .buildinfo  Model.html  Result.html  estimateParameters.html  estimateWeights.html  genindex.html  index.html  initialization.html  initialization.rst  load_data.html  load_data.rst  main.html  modules.html  objects.inv  py-modindex.html  requirements.txt  sampleForIntegral.html  search.html  searchindex.js  util.html
docs/SpiceMix/: Model.html  Result.html  estimateParameters.html  estimateWeights.html  initialization.html  load_data.html  main.html  modules.html  sampleForIntegral.html  util.html
docs/_sources/: Result.rst.txt  index.rst.txt
docs/_sources/SpiceMix/: estimateWeights.rst.txt  modules.rst.txt  sampleForIntegral.rst.txt
docs/_sources/stubs/: estimateParameters.rst.txt
docs/source/: api.md  cli.md  conf.py  index.md  installation.md  intro.md  quickstart.md  usage.md
docs/source/api/: spicemix.analysis.compute_ari_scores.rst  spicemix.analysis.compute_columnwise_autocorrelation.rst  spicemix.analysis.compute_confusion_matrix.rst  spicemix.analysis.compute_empirical_correlations.rst  spicemix.analysis.compute_silhouette_scores.rst  spicemix.analysis.evaluate_classification_task.rst  spicemix.analysis.find_differential_genes.rst  spicemix.analysis.leiden.rst  spicemix.analysis.multigroup_heatmap.rst  spicemix.analysis.multireplicate_heatmap.rst  spicemix.analysis.plot_all_metagene_embeddings.rst  spicemix.analysis.plot_ari_scores.rst  spicemix.analysis.plot_confusion_matrix.rst  spicemix.analysis.plot_gene_activations.rst  spicemix.analysis.plot_gene_trajectories.rst  spicemix.analysis.plot_in_situ.rst  spicemix.analysis.plot_metagene_embedding.rst  spicemix.components.SpiceMixDataset.compute_spatial_neighbors.rst  spicemix.components.SpiceMixDataset.plot_metagene_embedding.rst  spicemix.components.SpiceMixDataset.remove_connectivity_artifacts.rst  spicemix.components.SpiceMixDataset.rst  spicemix.io.load_anndata.rst  spicemix.io.save_anndata.rst  spicemix.model.SpiceMixPlus.estimate_parameters.rst  spicemix.model.SpiceMixPlus.estimate_weights.rst  spicemix.model.SpiceMixPlus.load_anndata_datasets.rst  spicemix.model.SpiceMixPlus.load_dataset.rst  spicemix.model.SpiceMixPlus.nll.rst  spicemix.model.SpiceMixPlus.rst  spicemix.model.SpiceMixPlus.save_results.rst  spicemix.model.SpiceMixPlus.synchronize_datasets.rst  spicemix.model.load_trained_model.rst
docs/source/tutorial_gallery/: STARmapPlus_preprocessing.ipynb  analysis_demo.ipynb  demo.h5ad  grid_search_demo.md  preprocessing_demo.ipynb  training_demo.ipynb
mlflow/: train.py
notebooks/: starmapplus_analysis_v2.ipynb
popari/: __about__.py  __init__.py  _binning_utils.py  _canvas.py  _dataset_utils.py  _embedding_optimizer.py  _hierarchical_view.py  _parameter_optimizer.py  _popari_dataset.py  _simulation_utils.py  analysis.py  components.py  initialization.py  io.py  main.py  model.py  plotting.py  sample_for_integral.py  simulation_framework.py  train.py  util.py
popari/mlflow/: grid_search.py  train.py  util.py
spicemix/: __about__.py  analysis.py  components.py  estimate_parameters.py  estimate_weights.py  explore_spatialLIBD.ipynb  initialization.py  io.py  issue.h5  load_data.py  model.py  phenotype_prediction_example_old.ipynb  sample_for_integral.py  simulation_framework.py  synthesize.py  util.py
src/SpiceMix/: components.py  estimate_parameters.py  estimate_weights.py  initialization.py  load_data.py  metagene_based_pseudo_3D_simulation.ipynb  model.py  pytest_output.txt  sketching_benchmarks.ipynb  stellar_codex_differential_analysis.ipynb  synthesize.py  util.py
tests/: conftest.py  test_analysis.py  test_binning.py  test_initialization.py  test_io.py  test_multigroup_spatial_differential.py  test_nmf_gd.py  test_nmf_mu.py  test_phenotype_prediction.py  test_popari_differential.py  test_popari_shared.py  test_pretraining.py  test_simulation.py  test_spicemix.py  test_spicemix_differential.py  test_spicemix_gd.py  test_spicemix_mu.py  test_spicemix_shared.py  test_spicemix_shared_inplace.py  test_spicemix_shared_optimized.py  test_spicemix_spatial_differential.py  test_train.py  test_util.py  tests_raehash.py
tests/test_data/multigroup/: example.h5ad  multigroup_spatial_noise_dataset.h5ad
tests/test_data/obsolete_synthetic_500_100_20_15_0_0_i4/: cell type encoded_predictor_iteration_10.pt
(+118 files in other folders)
