[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "popari"
dynamic = ["version"]

authors = [
  { name="Shahul Alam", email="alam.shahul@gmail.com" },
]
dependencies = [
    "numpy>=1.20.1",
    "scipy>=1.7.1",
    "scikit-learn>=0.24.1",
    "pandas>=1.5.2",
    "anndata>=0.9.1",
    "torch>=1.13.0",
    "tqdm>=4.60.0",
    "umap-learn>=0.5.1",
    "scanpy>=1.9.2",
    "seaborn>=0.11.1",
    "matplotlib>=3.7.0",
    "squidpy>=1.2.3",
    "louvain>=0.8.0"
]
description = "Popari: a probabilistic graphical model for integrated spatial transcriptomics analysis"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.version]
path = "popari/__about__.py"

[project.urls]
"Homepage" = "https://github.com/alam-shahul/popari"
"Bug Tracker" = "https://github.com/alam-shahul/popari/issues"

[project.scripts]
popari = "popari:main"
popari-mlflow = "popari.mlflow.train:main"
popari-grid-search= "popari.mlflow.grid_search:run"

[project.optional-dependencies]
simulation = [
  "jupyterlab",
  "ipycanvas",
]
mlflow = [
  "mlflow>=2.5.0",
  "toml>=0.10.2"
]

[tool]

[tool.hatch.build.targets.sdist]
include = [
  "popari/*.py",
  "popari/mlflow/*.py",
]

[tool.hatch.build.targets.wheel]
include = [
  "popari/*.py",
  "popari/mlflow/*.py",
]
